# docs/swagger.json
@@ -19,7 +19,7 @@
     "basePath": "/api/v1",
     "paths": {
         "/auth/login": {
-            "get": {
+            "post": {
                 "description": "Login user",
                 "consumes": [
                     "application/json"
@@ -31,11 +31,22 @@
                     "Auth"
                 ],
                 "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "User Data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LoginRequest"
+                        }
+                    }
+                ],
                 "responses": {}
             }
         },
         "/auth/register": {
-            "get": {
+            "post": {
                 "description": "Register new user",
                 "consumes": [
                     "application/json"
@@ -47,7 +58,48 @@
                     "Auth"
                 ],
                 "summary": "Register",
+                "parameters": [
+                    {
+                        "description": "User Data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RegisterRequest"
+                        }
+                    }
+                ],
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "model.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegisterRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "retype_password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
             }
         }
     }
