# model/request.go
@@ -1,0 +1,13 @@
+package model
+
+type LoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type RegisterRequest struct {
+	Email          string `json:"email"`
+	Username       string `json:"username"`
+	Password       string `json:"password"`
+	RetypePassword string `json:"retype_password"`
+}
